--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.3"
+    "react-native": "0.61.3",
+    "react-native-unimodules": "0.7.0-rc.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
