--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "expo-local-authentication": "^7.0.0",
     "react": "16.9.0",
     "react-native": "0.61.3",
     "react-native-unimodules": "0.7.0-rc.4"
